<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_gravity="center_vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_margin="10dp"
            android:text="@string/InputTitle" />
        <EditText 
            android:id="@+id/edtAddTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
		    android:padding="10dp"
			android:layout_margin="10dp"
			android:background="@color/textview_bgcolor"
			android:textColor="@color/text_color"
            android:singleLine="true"	/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_margin="10dp"
            android:text="@string/InputUsername" />
        <EditText 
            android:id="@+id/edtAddUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
		    android:padding="10dp"
			android:layout_margin="10dp"
			android:background="@color/textview_bgcolor"
			android:textColor="@color/text_color"
            android:singleLine="true"	/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_margin="10dp"
            android:text="@string/InputPassword" />
        <EditText 
            android:id="@+id/edtAddPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
		    android:padding="10dp"
			android:layout_margin="10dp"
			android:background="@color/textview_bgcolor"
			android:textColor="@color/text_color"
            android:singleLine="true"	/>
        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
		    android:padding="10dp"
			android:layout_margin="10dp"
            android:text="@string/Confirm" />
    </LinearLayout>

</LinearLayout>