<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
		
    	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_gravity="center_vertical" >
	
	        <TextView
	            android:id="@+id/textView"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
		        android:padding="10dp"
	            android:text="@string/InputPasswordHint" />
		    <EditText
		        android:id="@+id/editText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:padding="10dp"
		        android:textColor="@color/text_color"
		    	android:background="@color/textview_bgcolor"
		        android:inputType="textPassword" >
		        <requestFocus />
		
		    </EditText>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"	>
			    <Button 
			        android:id="@+id/buttonSubmit" 
			        android:layout_width="0dp" 
			        android:layout_height="wrap_content"
			        android:text="@string/Login"
				    android:padding="10dp"
				    android:layout_margin="10dp"
			        android:layout_weight="1" >
			        
			    </Button>
		        <Button 
		            android:id="@+id/buttonForgetPassword"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
				    android:padding="10dp"
				    android:layout_margin="10dp"
		            android:text="@string/ForgetPassword"	/>       
		    </LinearLayout>
        </LinearLayout>
    
</LinearLayout>